--- a/app/views/landing_pages/ascend.html.haml
+++ b/app/views/landing_pages/ascend.html.haml
@@ -5,32 +5,28 @@
     .row.main-body-row
       .landing-why-col.ascend-how
         .ascend-image
-          = render "/landing_pages/icons/header_#{landing_page_target}_svg"
-        %h1
-          Automatic Bicycle Registration for Bike Shops using Ascend POS
-        %h3
-          Link your Ascend Retail and Bike Index Accounts for free
-        %p
-          We have a new, free bicycle registration for bike shops. If you’re a shop that uses Ascend as your POS, our new Ascend point of sale integration will allow you to register each bike you sell automatically. Setup takes about 10 minutes.
-        %p
-          If your shop uses Lightspeed, check out our Lightspeed POS integration <a target="none" href="https://bikeindex.org/lightspeed">here</a>
-        %p
-          Once you’ve set up the Trek Ascend POS bicycle registration, you’re done! Each day, Bike Index will pull newly-sold bike information from Ascend to create Bike Index accounts for your customers. Their new bikes will be waiting for them upon login. They just have to check their email, and their new bike will be waiting for them.
-        %p
-          Then, if a customer’s bike goes missing, their bike’s information and serial number will be stored for them to access. But don’t worry: <a target="none" href="https://bikeindex.org/privacy">we will never give out any of your customer data</a>.
+          = render "landing_pages/icons/header_#{landing_page_target}_svg"
+
+        %h1= t(".automatic_bicycle_registration")
+        %h3= t(".link_your_ascend_retail_and_bike_index")
+
+        %p= t(".we_have_a_new_free_bicycle_registration")
+        %p= t(".if_your_shop_uses_lightspeed_html", lightspeed_path: lightspeed_path)
+        %p= t(".once_youve_set_up_the_trek_ascenwd")
+        %p= t(".then_if_a_customers_bike_goes_missing_html", privacy_path: privacy_path)
         %p
           %strong
-            
 
         %ol
           %li
-            Sign up as a #{link_to "new bike shop organization", new_organization_path} on Bike Index
+            - new_org_link = link_to t(".new_bike_shop_org"), new_organization_path
+            = t(".sign_up_as_a_new_org_html", new_org_link: new_org_link)
           %li
-            Follow the setup instructions on 
-            %strong
-              = link_to "Acend's Knowledge base article", "https://ascendrms.uservoice.com/knowledgebase/articles/1904050"
-            on Bike Index
+            - link_to t(".ascend_knowledge_base_article"), "https://ascendrms.uservoice.com/knowledgebase/articles/1904050"
+            = t(".follow_the_setup_instructions_html", ascend_link: ascend_link)
+
           %li
-            Email us the password to finish setting up!
+            = t(".email_us_the_password_to_finish_setting_u")
         %p
-          Email #{link_to "bikeshops@bikeindex.org", "mailto:bikeshops@bikeindex.org"} if you have any questions. Thank you for registering bikes in Bike Index!
+          - shops_email_link = link_to "bikeshops@bikeindex.org", "mailto:bikeshops@bikeindex.org"
+          = t(".email_shops_html", shops_email_link: shops_email_link)
