--- a/app/views/landing_pages/for_cities.html.haml
+++ b/app/views/landing_pages/for_cities.html.haml
@@ -5,76 +5,50 @@
     .container
       .row
         .icon-wrapper
-          = render "/landing_pages/icons/header_#{landing_page_target}_svg"
+          = render "landing_pages/icons/header_#{landing_page_target}_svg"
+
         .banner-text
-          %h1
-            Bike Index for Cities
-          %h3
-            Actually get people registered. And do it for cheap.
-          %h3
-            Plug your city in nationally.
+          %h1= t(".bike_index_for_cities")
+          %h3= t(".actually_get_people_registered_and_do_it_")
+          %h3= t(".plug_your_city_in_nationally")
 
     .ribbon.mobile-contact-link
       .container
         %h2
           = link_to cities_packages_path, class: "btn btn-primary btn-lg" do
-            Features &amp; Pricing
+            = t(".features_amp_pricing")
             %span.chevron &raquo;
 
   .container
     .row.main-body-row
       .landing-why-col
-        %h3
-          Mitigate the registration mess
+        %h3= t(".mitigate_the_registration_mess")
+        %p= t(".no_more_index_cards_or_excel_sheets_give_")
+        %p= t(".bring_together_bike_shops_schools_municip")
+        %p= render partial: "/landing_pages/tweet", locals: { tweet_id: 1033174779585605633 }
 
-        %p
-          No more index cards or excel sheets. Give your citizens the tools to
-          register from a smartphone, in less than two minutes, and use these
-          registrations to recover and return stolen bikes.
+        %h3= t(".our_community_is_your_community")
+        %p= t(".bike_index_is_the_community_registration_")
+        %p= t(".engage_your_residents_and_recover_their_b")
 
-        %p
-          Bring together bike shops, schools, municipal departments, and law
-          enforcement to register bikes in one system. Gone are the days of
-          waiting for people to not come in to register their bikes, or
-          wondering if that other department took care of it. Bike Index
-          consolidates everything in one manageable place.
-
-
-        %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 1033174779585605633 }
-
-        %h3 Our community is your community
-
-        %p
-          Bike Index is the community registration system of choice. We are the
-          bike registration system of over 600 organizations - communities in
-          every corner of the country. Join the most widely used bike
-          registration network in the nation.
-
-        %p
-          Engage your residents and recover their bikes, and they will love you
-          forever.
-
-
-        %h4 Related articles:
+        %h4= t(".related_articles")
         %ul
           %li
-            = link_to "Bike Index unveils partnership with the City of Palo Alto",
-            "https://bikeindex.org/news/bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa"
+            = link_to t(".bike_index_unveils_partnership_with_the_c"), news_path("bike-index-unveils-new-qr-stickers-and-partnership-with-the-city-of-pa")
 
         .trusted-by.hidden-lg-up
-          %h3
-            Trusted by Law Enforcement everywhere
+          %h3= t(".trusted_by_law_enforcement_everywhere")
           = image_tag "landing_pages/logos/law-enforcement.png", alt: "law enforcement partners"
 
       .next-steps-col
         .next-steps-wrap
           %header
-            Trusted by municipalities everywhere
+            = t(".trusted_by_municipalities_everywhere")
             = link_to cities_packages_path, class: "btn btn-primary btn-lg" do
-              Features &amp; Pricing
+              = t(".features_amp_pricing")
               %span.chevron &raquo;
+
           .trusted-by
             .header
-              Trusted by municipalities everywhere
+              = t(".trusted_by_municipalities_everywhere")
             = image_tag "landing_pages/logos/cities.png", alt: "municipal partners"
