--- a/app/views/landing_pages/for_community_groups.html.haml
+++ b/app/views/landing_pages/for_community_groups.html.haml
@@ -5,75 +5,50 @@
     .container
       .row
         .icon-wrapper
-          = render "/landing_pages/icons/header_#{landing_page_target}_svg"
+          = render "landing_pages/icons/header_#{landing_page_target}_svg"
+
         .banner-text
-          %h1
-            Bike Index for Community Groups
-          %h3
-            The most wide-reaching and effective tools against bike theft
-            &mdash; period.
+          %h1= t(".bike_index_for_community_groups")
+          %h3= t(".the_most_widereaching_and_effective_tools")
 
     .ribbon.mobile-contact-link
       .container
-        %h2
-          = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
+        %h2= link_to t(".sign_up_for_free"), new_organization_path, class: "btn btn-primary btn-lg"
 
   .container
     .row.main-body-row
       .landing-why-col
-        %h3 Help us help you
+        %h3= t(".help_us_help_you")
 
-        %p
-          We provide free and easy access to our registry for anyone and
-          everyone who rides a bicycle, in any capacity. Bike Index is a
-          community-driven effort in recovering lost and stolen bikes. No matter
-          the type of bike or cyclist, we want to keep all bikes rolling with
-          the owners that need them.
+        %p= t(".we_provide_free_and_easy_access_to_our_re")
 
-        %p
-          Spread the Bike Index word to your constituents to get them riding
-          protected. Create a free organization account #{link_to "here", new_organization_path}.
+        %p= t(".spread_the_bike_index_word_html", link: link_to(t(".here"), new_organization_path))
 
-        %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 875377223322259457 }
+        %p= render partial: "landing_pages/tweet", locals: { tweet_id: 875377223322259457 }
 
-        %h3 Partners made in heaven
-        %p
-          Gone are the days where you had to register your bike in your
-          neighborhood, county, city, state and country. Just register all bikes
-          in Bike Index and a cyclists registration will be valid anywhere. Run
-          registration drives? Host community cycling events? Let us know and we
-          will send you Bike Index materials.
+        %h3= t(".partners_made_in_heaven")
+        %p= t(".gone_are_the_days_where_you_had_to_regist")
 
-        %p
-          Registrations are free. Forever. Join Bike Index and start registering
-          today.
+        %p= t(".registrations_are_free_forever_join_bike_")
 
-        %p
-          Purchase a pack of advocacy materials #{link_to "here", "https://bikeindex.myshopify.com/"}.
+        %p= t(".purchase_a_pack_of_advocacy_html", link: link_to(t(".here"), 'https://bikeindex.myshopify.com/'))
 
-
-        %h4 Related articles:
+        %h4= t(".related_articles")
         %ul
-          %li
-            = link_to "Bike Index launches new Ambassadors program",
-            "https://bikeindex.org/news/bike-index-launches-ambassadors-program"
-          %li
-            = link_to "Bike Index welcomes Stolen Bikes NOLA",
-            "https://bikeindex.org/news/bike-index-welcomes-our-newest-partner---stolen-bikes-nola"
+          %li= link_to t(".bike_index_launches_new_ambassadors_progr"), news_path("bike-index-launches-ambassadors-program")
+          %li= link_to t(".bike_index_welcomes_stolen_bikes_nola"), news_path("bike-index-welcomes-our-newest-partner---stolen-bikes-nola")
 
 
         .trusted-by.hidden-lg-up
-          %h3
-            Trusted by community groups everywhere
+          %h3= t(".trusted_by_community_groups_everywhere")
           = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
 
       .next-steps-col
         .next-steps-wrap
           %header
-            Trusted by community groups everywhere
-            = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
+            = t(".trusted_by_community_groups_everywhere")
+            = link_to t(".sign_up_for_free"), new_organization_path, class: "btn btn-primary btn-lg"
           .trusted-by
             .header
-              Used by community groups everywhere
+              = t(".used_by_community_groups_everywhere")
             = image_tag "landing_pages/logos/community-groups.png", alt: "community group partners"
