--- a/app/views/landing_pages/for_law_enforcement.html.haml
+++ b/app/views/landing_pages/for_law_enforcement.html.haml
@@ -5,88 +5,62 @@
     .container
       .row
         .icon-wrapper
-          = render "/landing_pages/icons/header_#{landing_page_target}_svg"
+          = render "landing_pages/icons/header_#{landing_page_target}_svg"
+
         .banner-text
-          %h1
-            Bike Index for Law Enforcement
-          %h3
-            Is your department equipped to fight bike theft? Bike Index can help
-            you get bikes back into the right hands.
+          %h1= t(".bike_index_for_law_enforcement")
+          %h3= t(".is_your_department_equipped_to_fight_bike")
 
     .ribbon.mobile-contact-link
       .container
         %h2
-          = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
+          = link_to t(".sign_up_for_free"), new_organization_path, class: "btn btn-primary btn-lg"
 
   .container
     .row.main-body-row
       .landing-why-col
-        %h3
-          Recover your citizen's bikes
+        %h3= t(".recover_your_citizens_bikes")
+
+        %p= t(".youre_the_first_one")
+
+        - automated_tweets_link = link_to t(".automated_tweets"), "https://twitter.com/stolenbikessfo"
+        - local_ambassadors_link = link_to t(".local_ambassadors"), ambassadors_how_to_path
+        %p
+          = t(".you_have_the_authority_to_bring_html", link: automated_tweets_link, link: local_ambassadors_link)
+
+        %p= t(".with_over_215000_registries_and_almost_55")
+
+        %p= render partial: "landing_pages/tweet", locals: { tweet_id: 839247587521679360 }
+
+        %h3= t(".put_a_lock_on_bike_theft")
+
+        %p= t(".our_extensive_archive_has_helped_officers")
+
+        %p= t(".with_over_600_partnerships_html", link: link_to(t(".here"), new_organization_path))
 
         %p
-          You're the first one your citizens look to when their bikes are
-          stolen. Access and search our international database to return your
-          community's bikes to their rightful owners.
+          = t(".if_you_want_to_collaborate_html", link: link_to(t(".here"), for_cities_path))
 
-        %p
-          You have the authority to bring bikes back - that’s no small
-          responsibility. That’s why we have tools - such as our integration
-          with LeadsOnline and #{link_to "automated tweets", "https://twitter.com/stolenbikessfo"}
-          of stolen bikes - to keep your community safe. Connect with
-          #{link_to "local ambassadors", "http://bikeindex.org/ambassadors_how_to"}
-          and spotters to quickly confiscate and block sales of stolen bikes.
+        %p= render partial: "landing_pages/tweet", locals: { tweet_id: 890211853942407168 }
 
-        %p
-          With over 215,000 registries and almost 5,500 stolen bicycle
-          recoveries, we know how to help.
-
-
-        %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 839247587521679360 }
-
-        %h3 Put a lock on bike theft
-
-        %p
-          Our extensive archive has helped officers recover bikes involved in
-          criminal situations, from simple theft to chop shops, drug houses -
-          even fencing rings and online black markets.
-
-        %p
-          With over 600 partnerships, Bike Index is the industry leader in
-          bicycle registration. Join our network for free
-          #{link_to "here", "https://bikeindex.org/organizations/new"},
-          or ask us to put you in touch with an existing partner in law
-          enforcement.
-
-        %p
-          If you want to collaborate with other departments in your city to
-          manage a registry, learn more about Bike Index for municipalities
-          #{link_to "here", for_cities_path}.
-
-        %p
-          = render partial: "/landing_pages/tweet", locals: { tweet_id: 890211853942407168 }
-
-        %h4 Related articles:
+        %h4= t(".related_articles")
         %ul
           %li
-            = link_to "Bend reduces bike theft by 60 percent",
-            "https://bikeindex.org/news/bend-reduces-bike-theft-by-60-percent-with-help-from-pine-mountain-spo"
+            = link_to t(".bend_reduces_bike_theft_by_60_percent"), news_path("bend-reduces-bike-theft-by-60-percent-with-help-from-pine-mountain-spo")
           %li
-            = link_to "Bike Index's newest municipal partner: New Orleans",
-            "https://bikeindex.org/news/bike-indexs-newest-municipal-partner-new-orleans"
+            = link_to t(".bike_indexs_newest_municipal_partner"), news_path("bike-indexs-newest-municipal-partner-new-orleans")
 
         .trusted-by.hidden-lg-up
           %h3
-            Trusted by Law Enforcement everywhere
+            = t(".trusted_by_law_enforcement_everywhere")
           = image_tag "landing_pages/logos/law-enforcement.png", alt: "law enforcement partners"
 
       .next-steps-col
         .next-steps-wrap
           %header
-            Trusted by law enforcement everywhere
-            = link_to "Sign up for free", new_organization_path, class: "btn btn-primary btn-lg"
+            = t(".trusted_by_law_enforcement_everywhere")
+            = link_to t(".sign_up_for_free"), new_organization_path, class: "btn btn-primary btn-lg"
           .trusted-by
             .header
-              Trusted by law enforcement everywhere
+              = t(".trusted_by_law_enforcement_everywhere")
             = image_tag "landing_pages/logos/law-enforcement.png", alt: "law enforcement partners"
