--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,74 +1,54 @@
 !!!
 %html
-  = render "shared/header"
+  %head
+    = header_tags
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,400italic,300italic,700' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    = javascript_pack_tag "admin_application"
+    = stylesheet_pack_tag "application_css"
 
+  / manually override body_class in a few situations :/
   - body_class = "welcome-page" if current_page?(root_path) and controller_name == "welcome"
   - body_class = "vendor-signup-page" if current_page?(:vendor_signup)
   - body_class = "news-page" if controller_name == "news"
+  %body{ id: page_id, class:  body_class }
+    %nav.navbar.navbar-expand-md.navbar-light.bg-light.admin-navbar
+      %span.navbar-brand
+        = link_to (image_tag("logo.svg")), admin_root_path
+      - if current_user.superuser?
+        %ul.navbar-nav.d-none.d-lg-flex
+          %li.nav-item
+            = active_link "Users", admin_users_path, role: "button", class: "nav-link users", match_controller: true
+          %li.nav-item
+            = active_link "Bikes", admin_bikes_path, role: "button", class:"nav-link bikes", match_controller: true
+          %li.nav-item
+            = active_link "Organizations", admin_organizations_path, role: "button", class: "nav-link", match_controller: true
+          %li.nav-item
+            = active_link "News", admin_news_index_path, role: "button", class: "nav-link", match_controller: true
+          %li.nav-item
+            = active_link "Stolen", admin_stolen_bikes_path, role: "button", class: "nav-link", match_controller: true
+          - if Rails.env.development?
+            %li.dropdown.nav-item
+              %a.dropdown-toggle.nav-link{ "data-toggle" => "dropdown" }
+                Mailers
+              .dropdown-menu.admin-nav-dropdown
+                = link_to "Organized", '/rails/mailers/organized_mailer' , role: "button", class: "btn btn-light dropdown-item"
+                = link_to "Admin", '/rails/mailers/admin_mailer' , role: "button", class: "btn btn-light dropdown-item"
+                = link_to "Customer", '/rails/mailers/customer_mailer' , role: "button", class: "btn btn-light dropdown-item"
 
-  = stylesheet_link_tag "admin", media: "all"
+        - if admin_nav_display_view_all
+          = link_to admin_nav_select_link_active[:path], class: "nav-link text-muted em" do
+            All
+            .d-none.d-sm-inline-block.d-lg-none.d-xl-inline-block
+              = admin_nav_select_link_active[:title]
+        .fancy-select.unfancy.no-restore-on-backspace
+          = select(:admin, :other_navigation, options_for_select(admin_nav_select_links.map { |l| [l[:title], l[:path]] }), { prompt: admin_nav_select_prompt }, { class: "form-control" })
 
-  %body#body{ class: body_class }
-    = render "layouts/messages"
+        = link_to "Exit Admin", root_path, class: "btn btn-outline-secondary ml-auto less-strong d-none d-lg-inline-block"
+    = render 'layouts/revised_messages'
 
-    %header.global-header.collapsible-head.invisibled#header
-      = render "shared/header_nav"
+    %section#admin-content
+      .container-fluid.mt-4.mb-4
+        = yield
 
-    %header.replace-header
-      .inner-recep
-        - if current_user.superuser?
-          %h2.new-title
-            = admin_nav_link "Go hard", admin_root_path
-          %ul
-            %li
-              = admin_nav_link "Organizations", admin_organizations_path
-
-            %li
-              = admin_nav_link "Users", admin_users_path
-
-            %li
-              = admin_nav_link "Memberships", admin_memberships_path
-
-            %li
-              = admin_nav_link "Manufacturers", admin_manufacturers_path
-
-            %li
-              = admin_nav_link "Bikes", admin_bikes_path
-
-            %li
-              = admin_nav_link "News", admin_news_index_path
-            %li
-              = admin_nav_link "Stolen", admin_stolen_bikes_path
-            / %li
-            /   = admin_nav_link "Recoveries", admin_recoveries_path
-            %li
-              = admin_nav_link "Recovery displays", admin_recovery_displays_path
-            %li
-              = admin_nav_link "Paid Features", admin_paid_features_path
-            %li
-              = admin_nav_link "Payments", admin_payments_path
-            %li
-              = admin_nav_link "Invoices", admin_invoices_path
-
-            - if Rails.env.development?
-              %li
-                Mailers: #{admin_nav_link "organized", '/rails/mailers/organized_mailer'}, #{admin_nav_link "admin", '/rails/mailers/admin_mailer'}, #{admin_nav_link "customer", '/rails/mailers/customer_mailer'}
-
-
-
-    %section.content#admin-content
-      .receptacle
-        .inner-recep
-
-          = yield
-
-    = render 'shared/footer'
-
-  :javascript
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    ga('create', 'UA-38316708-1', 'auto');
-    ga('send', 'pageview');
-  = javascript_pack_tag "application"
+    = render 'shared/footer_revised'
