--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,9 +14,9 @@
           / %a.strava-login{ href: '/auth/strava' }
           /   %span.oauth-logo-block= image_tag 'revised/strava_login.svg'
           /   %span.oauth-text-block= t(".sign_up_using_strava")
-          %a.globalid-login{ href: '/auth/globalid' }
-            %span.oauth-logo-block= image_tag 'revised/globalid_logo.svg'
-            %span.oauth-text-block= t(".sign_up_using_globalid")
+          / %a.globalid-login{ href: '/auth/globalid' }
+          /   %span.oauth-logo-block= image_tag 'revised/globalid_logo.svg'
+          /   %span.oauth-text-block= t(".sign_up_using_globalid")
         .sign-in-up-or
           / %h3= t(".or")
         .main-form
