--- a/app/views/customer_mailer/bike_possibly_found_email.html.haml
+++ b/app/views/customer_mailer/bike_possibly_found_email.html.haml
@@ -2,6 +2,9 @@
   - bike_link = link_to(@bike.title_string, bike_url(@bike))
   = t(".html.we_think_your_stolen_bike_html", bike_title: bike_link)
 
-%p
-  = t(".html.check_out_match_here")
-  = link_to(@match.title_string, bike_url(@match))
+
+= t(".html.check_out_match_here")
+- if @match.is_a?(ExternalRegistryBike)
+  %p= link_to @match.title_string, @match.url
+- elsif @match.is_a?(Bike)
+  %p= link_to @match.title_string, bike_url(@match)
